2016-12-24 Bernard Victor Delvaux  <nadaeck@hotmail.com>
    Version : Spectrum3d-2.7.1 :
    * events.c : Some new key/mouse bindings and gestures;
    * main.c : "shortcuts", "gestures" and "quick start" have been removed from menu.

2016-12-16 Bernard Victor Delvaux  <nadaeck@hotmail.com>
    Version : Spectrum3d-2.7.0 :
    * general changes : Thanks to SDL2, multitouch is back!
    * general changes : some code cleaning;

2016-12-11 Bernard Victor Delvaux  <nadaeck@hotmail.com>
    Version : Spectrum3d-2.6.0 :
    * general changes : Display was distorted due to the inclusion of the SDL window in the GTK window; so Spectrum3d uses now only SDL in a separate window, like it used to be until version 2.1. Migration to SDL2 has been made, but it can still be compiled against SDL1.
 
2014-11-05 Bernard Victor Delvaux  <nadaeck@hotmail.com>
    Version : Spectrum3d-2.5.0 :
    * general changes : replacement of deprecated functions in GTK3; since "gtk_image_new_from_stock" is deprecated, new icons (from Gtk) has been added to the "data" directory and will be installed when installing Spectrum3d;
    * general changes : functions allowing to enable realtime without Jack (including files tespool.c and testpool.h) have been removed since it was of no use and was the source of crash;
    * main : "stop" button has been removed; "Microphone" is now the default audio source;
    * onclick.c : bug that made crash Spectrumd3d when changing the perspective has been solved (in function "change_perspective");
    * gstreamer.c : bug that made encoded files (such as .mp3 or .flac files) not readable after porting from Gstreamer-0.10 to Gstreamer-1.0 has been solved;
    * gstreamer.c : bug that made audiochebband increasing backgrounf noise after porting from Gstreamer-0.10 to Gstreamer-1.0 has been solved;
    * equalizer.c : audiochebband has been added a controle for poles and ripple;